# python_automation_testing_with_pytest

./: .gitignore  pyproject.toml
pytest_topics/: test_module02.py
pytest_topics/bddpytest/: test_bdd01.py  test_bddfixtures.py  test_bddparameterize.py
pytest_topics/bddpytest/myfeatures/: fixtures.feature  parameterize.feature
pytest_topics/py_assertions/: test_markers.py  test_xfail.py
pytest_topics/py_fixtures/: conftest.py  test_fixtures04.py
